--- a/HackATL/www/index.html
+++ b/HackATL/www/index.html
@@ -33,6 +33,12 @@
 
     <link rel="stylesheet" type="text/css" href="css/cardio.css">
 
+    <!--SweetAlert-->
+    <script type="text/javascript"
+            src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
+
+    <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css">
+
     <script type="text/javascript"
             src="js/webgazer.js"></script>
 
